# react-native-mmkv

./: .clang-format  .eslintrc.js  .gitignore  .gitmodules  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  README_V3.md  README_V4.md  babel.config.js  bun.lockb  bunfig.toml  jest.config.js  package-lock.json  package.json  react-native-mmkv.podspec  react-native.config.js  tsconfig.json
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build-android-release.yml  build-android.yml  build-ios-release.yml  build-ios.yml  ci.yml  harness-android.yml  harness-ios.yml  harness-web.yml  lint-cpp.yml  lint-typescript.yml  notice-yarn-changes.yml  run-nitrogen.yml  test-js.yml  update-lockfiles.yml  validate-android.yml  validate-cpp.yml  validate-js.yml
android/: CMakeLists.txt  MmkvBinding.cpp  MmkvBinding.h  build.gradle  cpp-adapter.cpp  gradle.properties
android-dummy/: MmkvModule.java  MmkvModulePackage.java
android-npm/: build.gradle
android-npm/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: AndroidLogger.cpp  AndroidMmkvPlatformContext.cpp  MmkvHostObject.cpp  MmkvHostObject.h  cpp-adapter.cpp  shared
android/src/main/java/com/mmkv/: MmkvModule.java  MmkvPackage.java
android/src/main/java/com/mrousavy/mmkv/: MmkvModule.java  MmkvPackage.java
android/src/main/java/com/reactnativemmkv/: MmkvModule.java  MmkvModule.kt  MmkvModulePackage.java  MmkvModuleSpec.java  MmkvPackage.java  MmkvPackage.kt
cpp/: CMakeLists.txt  Logger.cpp  Logger.h  MMKVManagedBuffer.h  ManagedBuffer.h  MmkvConfig.h  MmkvHostObject.cpp  MmkvHostObject.h  MmkvPlatformContext.h  MmkvSetup.cpp  MmkvSetup.h  NativeMmkvModule.cpp  NativeMmkvModule.h  TypedArray.cpp  TypedArray.h  example.cpp  example.h  mmkv-wrapper.cpp  mmkv-wrapper.h  react-native-mmkv.cpp  react-native-mmkv.h
docs/: HOOKS.md  LISTENERS.md  MIGRATE_FROM_ASYNC_STORAGE.md  V4_UPGRADE_GUIDE.md  WRAPPER_JOTAI.md  WRAPPER_MOBX.md  WRAPPER_MOBXPERSIST.md  WRAPPER_REACTQUERY.md  WRAPPER_REACT_QUERY.md  WRAPPER_RECOIL  WRAPPER_RECOIL.md  WRAPPER_REDUX.md  WRAPPER_TINYBASE.md  WRAPPER_ZUSTAND.md  WRAPPER_ZUSTAND_PERSIST_MIDDLEWARE.md
example/: .eslintrc.js  .prettierrc.js  Gemfile  app.json  babel.config.js  index.js  index.web.js  index.web.tsx  jest.config.js  metro.config.js  msbuild.binlog  package-lock.json  package.json  rn-harness.config.mjs  tsconfig.json  tslint.json
example/.harness/: manifest.js
example/__tests__/: App.test.tsx  MMKV.harness.ts  MMKV.test.ts
example/android/: build.gradle  gradle.properties  gradlew.bat  settings.gradle
example/android/app/: build.gradle
example/ios/: .xcode.env.local  File.swift  Gemfile  Podfile
example/ios/MmkvExample/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/MmkvExample.xcodeproj/: project.pbxproj
example/ios/MmkvExample.xcworkspace/: contents.xcworkspacedata
example/ios/MmkvExampleTests/: MmkvExampleTests.m
example/scripts/: web-dev.mjs  web-proxy.mjs
example/src/: App.tsx  Benchmarks.ts
example/test/: MMKV.test.ts
example/web/: index.html  webpack.config.js
example/windows/: react-native-mmkv-example.sln
example/windows/react-native-mmkv-example/: App.cpp  App.h  App.idl  App.xaml  AutolinkedNativeModules.g.cpp  AutolinkedNativeModules.g.targets  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  RNMMKVExample_TemporaryKey.pfx  ReactPackageProvider.cpp  ReactPackageProvider.h  react-native-mmkv-example.vcxproj
ios/: AppleMmkvPlatformContext.mm  JSIUtils.h  JSIUtils.mm  Mmkv.h  Mmkv.mm  MmkvBinding.h  MmkvBinding.mm  MmkvHostObject.h  MmkvHostObject.m  MmkvHostObject.mm  MmkvModule.h  MmkvModule.mm  MmkvOnLoad.mm  MmkvPlatformContext.h  MmkvPlatformContextModule.mm  NSDataMutableBuffer.h  PrivacyInfo.xcprivacy  RNMMKV.h  RNMMKV.mm  RNMmkv.h  RNMmkv.mm  YeetJSIUtils.h  YeetJSIUtils.mm
ios/Mmkv.xcodeproj/: project.pbxproj
ios/RNMMKV.xcodeproj/: project.pbxproj
macos/Mmkv.xcodeproj/: project.pbxproj
package/: .eslintrc.js  .gitattributes  .gitignore  README.md  package-lock.json  package.json  react-native-mmkv.podspec  react-native.config.js  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  gradle.properties  gradlew  prefab.gradle
package/android/src/main/: AndroidManifest.xml
package/android/src/main/cpp/: AndroidLogger.cpp
package/android/src/main/java/com/mrousavy/mmkv/: MmkvPackage.java  MmkvPlatformContextModule.java
package/cpp/: FastString.cpp  FastString.h  Logger.h  ManagedMMBuffer.h  MmkvHostObject.cpp  MmkvHostObject.h  MmkvLogger.h  MmkvTypes.h  NativeMmkvModule.cpp  NativeMmkvModule.h  UTFConversion.cpp  UTFConversion.h
package/example/: package.json  tsconfig.json
package/example/android/: gradle.properties  settings.gradle
package/example/ios/: .xcode.env.local  AppDelegate.swift  File.cpp  Podfile
package/example/src/: App.tsx
package/ios/: AppleLogger.mm  MmkvPlatformContextModule.mm
package/scripts/: folly_config.sh  folly_headers.sh  mmkv_headers.sh  setup_clang_env.sh
package/src/: MMKV.ts  MemoryWarningListener.ts  MemoryWarningListener.web.ts  ModuleNotFoundError.ts  NativeMmkv.ts  NativeMmkvPlatformContext.ts  PlatformChecker.ts  Types.ts  createMMKV.mock.ts  createMMKV.ts  createMMKV.web.ts  hooks.ts  index.ts
package/src/__tests__/: hooks.test.tsx  (+1 more)
scripts/: bootstrap.js  build-android.sh  clang-format.sh  release.sh
src/: LazyTurboModule.ts  MMKV.ts  MemoryCache.ts  NativeMmkv.ts  NativeMmkvPlatformContext.ts  PlatformChecker.ts  Types.ts  createMMKV.mock.ts  createMMKV.ts  createMMKV.web.ts  createTextEncoder.ts  hooks.ts  index.ts  index.tsx  index.web.ts  useMMKV.ts
src/__tests__/: hooks.test.tsx
test/: hooks.test.tsx
windows/: ReactNativeMmkv.sln
windows/ReactNativeMmkv/: ReactNativeMmkv.vcxproj  ReactNativeMmkv.vcxproj.filters  ReactNativeModule.cpp  ReactNativeModule.h  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl
(+22 files in other folders)
